# podcast-pop-person

./: .gitignore  README.md
sample/: intro.flac  outro.flac  podcast-pop-person-demo.flac  sample-transcribed.json  sound.flac  test-44100.flac
src/: pyproject.toml  step1_configure.py  step2_get_transcription.py  step3_parse_transcription.py  step4_build_audio.py  tests.py  utils.py
