

[project]
name = "podcast-pop-person"
version = "0.1"
authors = [
  { name="Ben Fisher", email="shinerainseven@gmail.com" },
]
license = "GPL-2.0"
license-files = ["LICEN[CS]E*"]
description = "Take a podcast episode and remove one of the speakers"
readme = "../README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "shinerainsevenlib",
  "librosa",
  "numpy",
  "soundfile",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "ruff",
    "pytest",
]


[project.urls]
Homepage = "https://github.com/moltenform/podcast-pop-person"
Issues = "https://github.com/moltenform/podcast-pop-person/issues"

[tool.ruff]
line-length = 99
indent-width = 4
target-version = "py38"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]

[tool.pylint.'MESSAGES CONTROL']

[tool.shinerainsevenlib]
config_collection_legacy = 1
pylint_import_suggested_other_settings = 1
rufflint_import_suggested_other_settings = 1

rufflint_ignore = [
    'S101', # we have asserts instead of assertTrue
]

pylint_specific_ignore_containing = [
    # skip this - we don't care about it for Bucket
    "E1101: Instance of 'Bucket' has no",
    # skip this - we don't care about it for fixtures
    "W0621: Redefining name 'fixture_",
]

rufflint_specific_ignore_containing = [
]

format_skip_if_path_contains = [
]

[tool.yapf]

# styles: google, pep8, yapf, facebook
based_on_style = "facebook"
spaces_before_comment = 1
split_before_logical_operator = false
column_limit = 99
indent_width = 4


